# binaryconv

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/binaryconv/: convertbin.py
