[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "binaryconv_max"
version = "0.0.1"
authors = [
  { name="Max Parry" },
]
description = "Binary converter for python"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
